# overnight-intraday-backtest

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: backtest.yml
config/: config.yaml  symbols_cn.csv  symbols_us.csv
src/: __init__.py  main.py
src/backtest/: __init__.py  portfolio.py  returns.py  rolling.py  statistics.py
src/data_pipeline/: __init__.py  cache.py  normalize.py  validators.py
src/data_sources/: __init__.py  baostock_client.py  twelve_data_client.py
src/report/: __init__.py  charts.py  markdown_report.py
src/utils/: config_loader.py  logging.py
tests/: test_data_validation.py  test_returns.py  test_statistics.py  test_twelve_data_client.py
