[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "overnight-intraday-backtest"
version = "0.1.0"
description = "Overnight and intraday return decomposition and statistical validation for US and China markets."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
